MOBILE-4595 a11y: Fix color contrast in menus and tabs

--- a/src/theme/components/ion-action-sheet.scss
+++ b/src/theme/components/ion-action-sheet.scss
@@ -2,6 +2,8 @@ ion-action-sheet {
     --button-color: var(--ion-text-color);
     --button-color-selected: var(--ion-text-color);
 
+    @include core-focus-inset-outline();
+
     .action-sheet-title {
         --color: var(--ion-text-color);
         font-weight: bold;
